--- a/gamemode_zombies.cfg
+++ b/gamemode_zombies.cfg
@@ -8,6 +8,7 @@ mp_ct_default_melee weapon_knifegg weapon_taser
 mp_ct_default_primary weapon_m4a1
 mp_ct_default_secondary weapon_deagle
 mp_t_default_primary weapon_sg556
+mp_t_default_secondary weapon_cz75a
 sv_infinite_ammo 2
 ammo_grenade_limit_total 5
 mp_ct_default_grenades weapon_decoy weapon_hegrenade weapon_incgrenade weapon_smokegrenade weapon_tagrenade
