Disable player autokicking properly
`mp_disable_autokick` prevents specific players from being kicked.
`mp_autokick` is what we want.

--- a/gamemode_zombies.cfg
+++ b/gamemode_zombies.cfg
@@ -52,7 +52,7 @@ ff_damage_reduction_grenade_self 1
 ff_damage_reduction_other 1
 
 // Avoid players getting kicked
-mp_disable_autokick
+mp_autokick 0
 
 // Fill enemy team with enemies
 mp_autoteambalance 0
